# rpg

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  alembic.ini  pyproject.toml
.claude/agents/: database-architect.md  game-designer.md  langgraph-expert.md  physics-validator.md  physiology-validator.md  prompt-engineer.md  realism-validator.md  social-validator.md  storyteller.md  temporal-validator.md
.claude/commands/: commit.md  e2e-fix.md  issue.md  monitor-gameplay.md  play-test.md  tackle.md  update-docs.md
.claude/docs/: agent-prompts.md  coding-standards.md  database-conventions.md  database-reference.md  gameplay-testing-guide.md  realism-principles.md
alembic/: env.py
alembic/versions/: 001_add_realism_system_models.py  002_add_appearance_columns.py  003_add_character_preferences.py  004_normalize_need_semantics.py  005_add_navigation_system.py  006_add_potential_stats.py  007_remove_intimacy_profiles.py  008_add_thirst_and_cravings.py  009_add_character_memory.py  010_add_companion_tracking.py  011_add_npc_goals.py  012_add_location_visits.py  0ad9be14ad12_add_mentioned_items_to_turns.py  111af31a57d1_add_relationship_arcs_table.py  12d9e2934e02_add_item_weight_field.py  1d4fed343685_add_storage_observations_table.py  232c117be2f2_add_rumor_system_tables.py  2564a021f6ff_add_relationship_milestones.py  25d0fb8756ad_add_theft_tracking_and_storage_.py  369661c753f3_add_birthplace_to_entities.py  40abf4bc66f1_replace_energy_with_stamina_sleep_.py  4fbbe5395f6d_llm_generated_arcs_and_voices.py  52aef17597f5_add_subturn_metadata_to_turns.py  543ae419033d_add_hidden_backstory_to_entities.py  54cbf2dbce3a_add_mentioned_npcs_to_turns.py  (+18 more)
docs/: IDEAS.md  api-reference.md  architecture.md  game-mechanics.md  gm-pipeline-e2e-testing.md  implementation-plan-structured-gm.md  implementation-plan.md  llm-deployment.md  project-outline.md  unified-pipeline-proposal.md  user-guide.md
scripts/: cleanup_duplicate_turns.py  e2e-fix-loop.sh  gameplay_monitor.py  gm_e2e_immersive_runner.py  gm_e2e_player_agent.py  gm_e2e_scenarios.py  gm_e2e_test_runner.py  gm_pipeline_test_protocol.py  migrate_session_72.py
src/: __init__.py  config.py  main.py
tests/: __init__.py  conftest.py  factories.py  test_config.py
(+664 files in other folders)
